@@ -39,7 +39,7 @@ admin.site.register(DailyStat, DailyStatAdmin)
 class PopularizeCostAdmin(admin.ModelAdmin):
     list_display = ('date',
                     'carrylog_order', 'carrylog_click', 'carrylog_thousand', 'carrylog_agency', 'carrylog_recruit',
-                    'carrylog_order_buy','carrylog_cash_out','carrylog_deposit','carrylog_refund_return',
+                    'carrylog_order_buy','carrylog_cash_out','carrylog_deposit','carrylog_refund_return', 'carrylog_red_packet',
                     'total_carry_in',
                     'total_carry_out')
     # list_filter = (DateFieldListFilter,)
